--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
                                       <p class="black-text">This is your first panel</p>
                                         
                                     </div>
-                                    <div class="carousel-item amber black-text" href="#two!">
+                                    <div class="carousel-item black-text" href="#two!">
                                       <h2>Second Panel</h2>
                                       <p class="black-text">This is your second panel</p>
                                     </div>
-                                    <div class="carousel-item green black-text" href="#three!">
+                                    <div class="carousel-item black-text" href="#three!">
                                       <h2>Third Panel</h2>
                                       <p class="black-text">This is your third panel</p>
                                     </div>
-                                    <div class="carousel-item blue black-text" href="#four!">
+                                    <div class="carousel-item black-text" href="#four!">
                                       <h2>Fourth Panel</h2>
                                       <p class="black-text">This is your fourth panel</p>
                                     </div>
