--- a/inicio.html
+++ b/inicio.html
@@ -86,9 +86,11 @@
         <!-- services -->
                 <section>
                 
-                    <div class="col s6 m12 l10 blu">
-                        
-                            <div class="division col s6 m12 l6 blue">
+                    <div class="row">
+
+
+                        <div class="push-s1 col s10">
+                            <div class="division blue">
                                 <ul>
                                     <li>projection promotion</li>
                                     <li>corporate videos</li>
@@ -98,18 +100,18 @@
                                 <h4>visual promotion <br>&amp; branding </h4>
                             </div>
 
-                            <div class="division col s6 m12 l4 purple">
-                                <ul class="">
+                            <div class="division purple">
+                                <ul>
                                     <li> publishing </li>
                                     <li> packaging </li>
                                     <li> illustration </li>
-                                    <li>character design &amp; animation </li>
+                                    <li>character design &amp;<br> animation </li>
                                 </ul>
                                 <h4> graphic design </h4>
                             </div>
 
-                            <div class="division col s6 m12 l4 yellow">
-                                <ul class="ml">
+                            <div class="division yellow">
+                                <ul>
                                     <li> publishing </li>
                                     <li> packaging </li>
                                     <li> illustration </li>
@@ -118,8 +120,12 @@
                                 <h4> web design &amp;<br> development </h4>
                             </div>
 
+                        </div>
+
+
+
                             <div class="division col s6 m12 l4 orange">
-                                <ul class="ml">
+                                <ul>
                                     <li> publishing </li>
                                     <li> packaging </li>
                                     <li> illustration </li>
